# VirtuaLook

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: about.html  admin.html  app.js  features.html  guide.html  index.html  pricing.html  style.css  tryon.html
scripts/: run.sh
services/vton/: .env.example  download-models.sh  requirements-ml.txt  requirements.txt
services/vton/app/: catvton_runner.py  config.py  database.py  inference.py  main.py  models.py  replicate_runner.py  seed.py  site_pages.py
services/vton/app/routers/: admin.py  garments.py  photos.py  tryon.py
training/: README.md  requirements.txt  train_tryon.py
